example/secondfile/objects/DHStatus_Errors__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Ethernet Specific Data-DHStatus-Errors</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Ethernet Specific Data-DHStatus-Errors-Category</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Connection_Level_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-Connection Level Data</label>
        <referenceTo>DHStatus_Connection_Level_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Errors</relationshipLabel>
        <relationshipName>DHStatus_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Ethernet_Access_Circuit_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-Ethernet Access Circuit Data</label>
        <referenceTo>DHStatus_Ethernet_Access_Circuit_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Errors</relationshipLabel>
        <relationshipName>DHStatus_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Ethernet_Specific_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Ethernet Specific Data-DHStatus-Errors--DHStatus-Ethernet Specific Data</description>
        <label>DHStatus-Ethernet Specific Data</label>
        <referenceTo>DHStatus_Ethernet_Specific_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Errors</relationshipLabel>
        <relationshipName>DHStatus_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Logical_Provisioning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning</description>
        <label>DHStatus-Logical Provisioning</label>
        <referenceTo>DHStatus_Logical_Provisioning__c</referenceTo>
        <relationshipLabel>DHStatus-Errors</relationshipLabel>
        <relationshipName>DHStatus_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_PL_Group_Port_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DHStatus PLGroupPortData Error</description>
        <label>DHStatus-PL Group Port Data</label>
        <referenceTo>DHStatus_PL_Group_Port_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Errors</relationshipLabel>
        <relationshipName>DHStatus_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_PL_Port_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DHStatus PLPortData Error</description>
        <label>DHStatus-PL Port Data</label>
        <referenceTo>DHStatus_PL_Port_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Errors</relationshipLabel>
        <relationshipName>DHStatus_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ErrorsubCategory__c</fullName>
        <label>ErrorsubCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorurlDescription__c</fullName>
        <description>Custom object to store the Description of Errorurl.</description>
        <label>ErrorurlDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Errorurl__c</fullName>
        <description>Custom object to store the Errorurl</description>
        <label>Errorurl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Identifier__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Ethernet Specific Data-DHStatus-Errors-Key Identifier</description>
        <label>Key Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Ethernet Specific Data-DHStatus-Errors-Message</description>
        <label>Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Ethernet Specific Data-DHStatus-Errors-Number</description>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Ethernet Specific Data-DHStatus-Errors-Type</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Errors</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>DHStatus-Errors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>